Add csurf package

--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -13,6 +13,7 @@
   <div class="container flex m-auto h-full w-full justify-center items-center">
 
     <form class="w-6/12" method="POST" action="/">
+      <input type="hidden" name="_csrf" value="{{_csrfToken}}">
       <div class="md:flex md:items-center mb-6">
         <div class="md:w-1/5">
           <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-name">
